Add latin name as subtitle on product page
I’m still working out the details on how to properly mark this up as an `h2` tag—using a custom `.phtml` template file throws an error in the Bitnami container. I opened an issue in the bitnami/bitnami-docker-magento repo on GitHub.

--- a/src/magento/htdocs/app/design/frontend/AromaShield/custom/Magento_Catalog/layout/catalog_product_view.xml
+++ b/src/magento/htdocs/app/design/frontend/AromaShield/custom/Magento_Catalog/layout/catalog_product_view.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
   <body>
-    <referenceBlock name="page.main.subtitle">
-      <arguments>
-        <argument name="css_class" xsi:type="string">product</argument>
-        <argument name="add_base_attribute" xsi:type="string">itemprop="latin_name"</argument>
-      </arguments>
+    <referenceBlock name="page.main.title">
+      <block class="Magento\Catalog\Block\Product\View" name="product.info.as_latin_name" template="product/view/attribute.phtml">
+        <arguments>
+          <argument name="at_call" xsi:type="string">getAsLatinName</argument>
+          <argument name="at_code" xsi:type="string">as_latin_name</argument>
+          <argument name="css_class" xsi:type="string">as_latin_name</argument>
+        </arguments>
+      </block>
     </referenceBlock>
 
     <referenceBlock name="product.info.details">
